--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
     <p class="banner-texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
     <input type="search" class="banner-pesquisa" placeholder="Qual será sua próxima leitura?">
 </section>
+    <section class="carrossel">
+        <h2 class="carrossel-titulo">úlimos lançamentos</h2>
+    </section>
+
+
+
 </body>
 
 </html>
