--- a/index.html
+++ b/index.html
@@ -49,10 +49,15 @@
     <!-- Additional required wrapper -->
     <div class="swiper-wrapper">
       <!-- Slides -->
-      <div class="swiper-slide">Slide 1</div>
-      <div class="swiper-slide">Slide 2</div>
-      <div class="swiper-slide">Slide 3</div>
-      ...
+      <div class="swiper-slide"><img src="img/Gestão2.svg" alt=""></div>
+      <div class="swiper-slide"><img src="img/Tunning.svg" alt="loser"></div>
+      <div class="swiper-slide"><img src="img/ApacheKafka.svg" alt=""></div>
+      <div class="swiper-slide"><img src="img/Construct2.svg" alt=""></div>
+      <div class="swiper-slide"><img src="img/Tuning.svg" alt=""></div>
+      <div class="swiper-slide"><img src="img/ReactNative.svg" alt=""></div>
+      <div class="swiper-slide"><img src="img/Portugol.svg" alt=""></div>
+      <div class="swiper-slide"><img src="img/Guia Front-end.svg" alt=""></div>
+
     </div>
     <!-- If we need pagination -->
     <div class="swiper-pagination"></div>
