--- a/index.html
+++ b/index.html
@@ -70,6 +70,17 @@
     <div class="swiper-scrollbar"></div>
   </div>
     </section>
+
+    <script>
+      const swiper = new Swiper('.swiper', {
+          spaceBetween: 10,
+          slidesPerView: 3,
+          pagination: {
+              el: '.swiper-pagination',
+              type: 'bullets',
+           },
+      });
+  </script>
     <link href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
 
 
