--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
-/>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
  
 </head>
 <body>
@@ -46,6 +45,8 @@
         <h2 class="carrossel-titulo">úlimos lançamentos</h2>
         <!-- Slider main container -->
 <div class="swiper">
+   <!-- If we need pagination -->
+   <div class="swiper-pagination"></div>
     <!-- Additional required wrapper -->
     <div class="swiper-wrapper">
       <!-- Slides -->
@@ -59,8 +60,7 @@
       <div class="swiper-slide"><img src="img/Guia Front-end.svg" alt=""></div>
 
     </div>
-    <!-- If we need pagination -->
-    <div class="swiper-pagination"></div>
+   
   
     <!-- If we need navigation buttons -->
     <div class="swiper-button-prev"></div>
@@ -69,8 +69,9 @@
     <!-- If we need scrollbar -->
     <div class="swiper-scrollbar"></div>
   </div>
-    </section>
 
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script>
       const swiper = new Swiper('.swiper', {
           spaceBetween: 10,
@@ -81,7 +82,6 @@
            },
       });
   </script>
-    <link href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
 
 
 </body>
