--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="swiper-wrapper">
       <!-- Slides -->
       <div class="swiper-slide"><img src="img/Gestão2.svg" alt=""></div>
-      <div class="swiper-slide"><img src="img/Tunning.svg" alt="loser"></div>
+      <div class="swiper-slide"><img src="img/Tuning.svg" alt=""></div>
       <div class="swiper-slide"><img src="img/ApacheKafka.svg" alt=""></div>
       <div class="swiper-slide"><img src="img/Construct2.svg" alt=""></div>
       <div class="swiper-slide"><img src="img/Tuning.svg" alt=""></div>
