--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Alura Books</title>
 <link rel="stylesheet" href="reset.css">
+<link rel="preconnect" href="https://fonts.googleapis.com"&gt;
+<link rel="preconnect" href="https://fonts.gstatic.com&quot; crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap&quot; rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/&gt;
 <link rel="stylesheet" href="styles.css">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
- 
 </head>
 <body>
 <header class="cabecalho">
@@ -37,53 +36,51 @@
 </div>
 </header>
 <section class="banner">
-    <h2 class="banner-titulo">Já sabe por onde começar?</h2>
-    <p class="banner-texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
-    <input type="search" class="banner-pesquisa" placeholder="Qual será sua próxima leitura?">
+<h2 class="banner-titulo">Já sabe por onde começar?</h2>
+<p class="banner-texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
+<input type="search" class="banner-pesquisa" placeholder="Qual será sua próxima leitura?">
 </section>
-    <section class="carrossel">
-        <h2 class="carrossel-titulo">úlimos lançamentos</h2>
-        <!-- Slider main container -->
+<section class="carrossel">
+<h2 class="carrossel-titulo">últimos lançamentos</h2>
+<!-- Slider main container -->
 <div class="swiper">
-   <!-- If we need pagination -->
-   <div class="swiper-pagination"></div>
-    <!-- Additional required wrapper -->
-    <div class="swiper-wrapper">
-      <!-- Slides -->
-      <div class="swiper-slide"><img src="img/Gestão2.svg" alt=""></div>
-      <div class="swiper-slide"><img src="img/Tuning.svg" alt=""></div>
-      <div class="swiper-slide"><img src="img/ApacheKafka.svg" alt=""></div>
-      <div class="swiper-slide"><img src="img/Construct2.svg" alt=""></div>
-      <div class="swiper-slide"><img src="img/Tuning.svg" alt=""></div>
-      <div class="swiper-slide"><img src="img/ReactNative.svg" alt=""></div>
-      <div class="swiper-slide"><img src="img/Portugol.svg" alt=""></div>
-      <div class="swiper-slide"><img src="img/Guia Front-end.svg" alt=""></div>
-
-    </div>
-   
-  
-    <!-- If we need navigation buttons -->
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-button-next"></div>
-  
-    <!-- If we need scrollbar -->
-    <div class="swiper-scrollbar"></div>
-  </div>
-
-    </section>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script>
-      const swiper = new Swiper('.swiper', {
-          spaceBetween: 10,
-          slidesPerView: 3,
-          pagination: {
-              el: '.swiper-pagination',
-              type: 'bullets',
-           },
-      });
-  </script>
+<!-- If we need pagination -->
+<div class="swiper-pagination"></div>
+<!-- Additional required wrapper -->
+<div class="swiper-wrapper">
+<!-- Slides -->
+<div class="swiper-slide"><img src="img/Acessibilidade.svg" alt=""></div>
+<div class="swiper-slide"><img src="img/Angular.svg" alt=""></div>
+<div class="swiper-slide"><img src="img/Construct2.svg" alt=""></div>
+<div class="swiper-slide"><img src="img/Gestão2.svg" alt=""></div>
+<div class="swiper-slide"><img src="img/Guia Front-end.svg" alt=""></div>
+<div class="swiper-slide"><img src="img/Liderança.svg" alt=""></div>
+<div class="swiper-slide"><img src="img/MEAN.svg" alt=""></div>
+<div class="swiper-slide"><img src="img/MetricasAgeis.svg" alt=""></div>
+</div>
 
 
+<!-- If we need navigation buttons -->
+<div class="swiper-button-prev"></div>
+<div class="swiper-button-next"></div>
+
+<!-- If we need scrollbar -->
+<div class="swiper-scrollbar"></div>
+</div>
+
+</section>
+
+<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script&gt;
+<script>
+const swiper = new Swiper('.swiper', {
+spaceBetween: 10,
+slidesPerView: 3,
+pagination: {
+el: '.swiper-pagination',
+type: 'bullets',
+},
+});
+</script>
 </body>
 
 </html>
