--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Alura Books</title>
 <link rel="stylesheet" href="reset.css">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
+<link rel="preconnect" href="https://fonts.googleapis.com " >
+<link rel="preconnect" href="https://fonts.gstatic.com " crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap&quot; rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css&quot; />
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -67,10 +67,26 @@
 <!-- If we need scrollbar -->
 <div class="swiper-scrollbar"></div>
 </div>
-
+<div class="card">
+<div class="card-1">
+<div class="card-1-texto">
+<h3 class="card-titulo-1">Talvez você também se interesse por...</h3>
+<h2 class="card-titulo-2">Angular 11 e Firebase</h2>
+<p class="card-texto">Construindo uma aplicação integrada com a plataforma Google</p>
+</div>
+<img src="img/Card.svg" alt="">
+</div>
+<div class="card-2">
+<ul class="botões">
+<li class="botões-item"><img src="img/Favoritos.svg" alt=""></li>
+<li class="botões-item"><img src="img/Sacola.svg" alt=""></li>
+</ul>
+<a class="botão-link" href="#">Saiba mais</a>
+</div>
+</div>
 </section>
 
-<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js "></script>
 <script>
 const swiper = new Swiper('.swiper', {
 spaceBetween: 10,
