--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
 <!-- Additional required wrapper -->
 <div class="swiper-wrapper">
 <!-- Slides -->
-<div class="swiper-slide"><img src="img/Acessibilidade.svg" alt=""></div>
+<div class="swiper-slide"><img src="img/ApacheKafka.svg" alt=""></div>
 <div class="swiper-slide"><img src="img/Angular.svg" alt=""></div>
 <div class="swiper-slide"><img src="img/Construct2.svg" alt=""></div>
 <div class="swiper-slide"><img src="img/Gestão2.svg" alt=""></div>
 <div class="swiper-slide"><img src="img/Guia Front-end.svg" alt=""></div>
-<div class="swiper-slide"><img src="img/Liderança.svg" alt=""></div>
-<div class="swiper-slide"><img src="img/MEAN.svg" alt=""></div>
-<div class="swiper-slide"><img src="img/MetricasAgeis.svg" alt=""></div>
+<div class="swiper-slide"><img src="img/Portugol.svg" alt=""></div>
+<div class="swiper-slide"><img src="img/ReactNative.svg" alt=""></div>
+<div class="swiper-slide"><img src="img/Tuning.svg" alt=""></div>
 </div>
 
 
